@@ -17,6 +17,10 @@ Post v24.03.0
     external-ids, the option is no longer needed as it became effectively
     "true" for all scenarios.
   - Added DHCPv4 relay support.
+  - The "options:ic-route-blacklist" option in the Northbound NB_Global table
+    has been renamed to "options:ic-route-denylist" in order to comply with
+    inclusive language guidelines. The previous name is still recognized to
+    aid with backwards compatibility.
 
 OVN v24.03.0 - 01 Mar 2024
 --------------------------
